--- a/Q&A/00.time-zone.md
+++ b/Q&A/00.time-zone.md
@@ -10,8 +10,8 @@
     - ${DRUID_HOME}/conf/druid/cluster/query/broker/runtime.properties
         - druid.sql.planner.sqlTimeZone=Asia/Shanghai
         - 效果图
-            - ![avatar](./time-zone.png)
+            - ![avatar](images/time-zone.png)
 ## 3. 前端界面(ingestion) created_time 时区
  - created_time 是 MiddleManager创建Peon进程的时间,会被记录到MateData (MySQL)中, 默认UTC; ui传sql查询,暂时没有找到更改办法.
-    - ![avatar](./ui-ingestion.png)
+    - ![avatar](images/ui-ingestion.png)
  
