--- a/local/01.PCG-007-druid保障需求.md
+++ b/local/01.PCG-007-druid保障需求.md
@@ -9,7 +9,7 @@
   - 3.资源预留buffer50%, 达到瓶颈告知;
   
 ## 保障
-  - 针对实时数据摄入稳定性, 不能100%保障task无故障,只能尽量缩短故障时间 - (故障不可避免,只能尽量缩短恢复时间)
+  - druid数据摄入稳定性, 任何系统不能100%保障无故障 - (故障不可避免,只能尽量缩短恢复时间)
     - 可提前规避的task故障
       - deepStorage 故障或资源不足
         - 例如 hdfs 空间不足, 造成 task handoff阻塞, task失败
