--- a/doc/Q&A/03.hadoop-ingestion.md
+++ b/doc/Q&A/03.hadoop-ingestion.md
@@ -12,6 +12,9 @@
   - 数据解析异常
 - 解决方式:
   - 检查 task 配置, 数据分隔符是否制定
+    - ```json
+      
+      ```
 ## 3. 读取远端hdfs数据, 配置了双 nameservice, 报错: ava.lang.RuntimeException: java.net.ConnectException: Call From ........
 - 原因
   - 远端host 解析问题
