--- a/doc/Q&A/01.ingestion-task-疑难杂症.md
+++ b/doc/Q&A/01.ingestion-task-疑难杂症.md
@@ -1,4 +1,4 @@
-# 疑难杂症
+# ingestion task 疑难杂症
 ## 1. task java.lang.UnsupportedOperationException: Numeric columns do not support multivalue rows.
 - 原因:
   - 在摄入期间发现数据包含多个值的行，而indexer不知道如何处理.
