--- a/doc/Q&A/02.some-use-questions.md
+++ b/doc/Q&A/02.some-use-questions.md
@@ -1,5 +1,12 @@
 # 常见的使用问题
+
 - kafka index service 数据延迟查看
-- 
+    1. supervisor 界面点击 查看 supervisor status 状态.
+    2. 查看 kafka lag.
+- kafka 消息延迟(堆积) 处理方式
+    - 在task slots资源充足的情况下, 增加 task 数;
+    - 查看segment 提交链路, task -> deepstorage publish coordinatal -> historical handoff加载 segment 整条链路的瓶颈 如果大量 task pending,
+      则调整ovlord 线程数 如果 publish 慢 , 检查 overload 瓶颈, 是否是mysql连接池过小 如果handoff 慢 检查middleManager到 hdfs I/O 瓶颈
+      检测是否coordinator分配策略, 线程数瓶颈
 
 [zz](https://support.imply.io/hc/en-us/articles/115004357554-What-happens-when-changing-granularity-during-data-ingestion-)
